# ragtime

./: .gitignore  Cargo.toml  Changelog  README.md  embed-debug.ipynb  ragprompt
prompts/: chunkprompt  chunkprompt1  chunkprompt2
ragtime/: Cargo.toml
ragtime/src/: decoder.rs  doc.rs  general_decoder.rs  lib.rs  llama.rs  simple_prompt.rs
ragtime/src/bge_m3/: onnx.rs
ragtime/src/gte_large_en/: onnx.rs
ragtime/src/gte_qwen2_7b_instruct/: llama.rs
ragtime/src/phi3/: llama.rs  mod.rs  onnx.rs  prompt.rs
src/: bge_m3.rs  db.rs  doc.rs  lib.rs  qa.rs  qa_llama.rs  qa_onnx.rs
src/bge_m3/: llama.rs  onnx.rs
src/llama/: db.rs  mod.rs  qa.rs
src/onnx/: mod.rs
src/phi3/: llama.rs  onnx.rs  prompt.rs
utils/: Cargo.toml  extract-summaries
utils/src/: chunk.rs  embed.rs  encode.rs  gen.rs  qa.rs
