[profile.release]
codegen-units = 1
opt-level = 3
lto = true
debug = false

[workspace.dependencies]
ort = "2.0.0-rc.2"
anyhow = "1"
tracing-subscriber = "0.3"
tracing = "0.1.40"
tokenizers = "0.19"
ndarray = "0.15"
usearch = "2.12.0"
memmap2 = "0.9.4"
serde = "1"
serde_derive = "1"
serde_json = "1"
fxhash = "0.2"
chrono = "0.4.38"
indexmap = "2.2.6"
#llama-cpp-2 = { git = "https://github.com/utilityai/llama-cpp-rs" }
llama-cpp-2 = { version = "0.1.62" }
encoding_rs = "0.8.34"
compact_str = "0.7.1"
smallvec = {version = "1", features = ["union", "const_generics"]}

[workspace]
resolver = "2"
members = [
    "ragtime",
    "utils"
]