[profile.release]
codegen-units = 1
opt-level = 3
lto = true
debug = false

[workspace.dependencies]
arcstr = { version = "1", features = ["serde"] }
ort = "2.0.0-rc.2"
anyhow = "1"
tracing-subscriber = "0.3"
tracing = "0.1.40"
tokenizers = "0.19"
ndarray = "0.15"
#usearch = { version = "2.13.1", path = "../usearch"}
usearch = "2.13.1"
memmap2 = "0.9.4"
serde = "1"
serde_derive = "1"
serde_json = "1"
fxhash = "0.2"
chrono = "0.4.38"
indexmap = "2.2.6"
llama-cpp-2 = { git = "https://github.com/utilityai/llama-cpp-rs" }
#llama-cpp-2 = { version = "0.1.62" }
encoding_rs = "0.8.34"
compact_str = "0.8.0"
smallvec = {version = "1", features = ["union", "const_generics"]}
regex = "1"
fs3 = "0.5"
infer = "0.16"
tempfile = "3"
md5 = "0.7"

[workspace]
resolver = "2"
members = [
    "ragtime",
    "utils"
]