[package]
name = "ragtime"
authors = ["Eric Stokes <eestokes@pm.me>"]
license = "MIT"
repository = "https://github.com/estokes/ragtime"
description = "Easy Retrieval Augmented Generation"
documentation = "https://docs.rs/ragtime"
readme = "../README.md"
keywords = ["ai", "rag", "phi3"]
categories = ["text-processing"]
version = "0.1.0"
edition = "2021"

[features]
vulkan = ["llama-cpp-2/vulkan"]
native = ["llama-cpp-2/native"]
cuda = ["llama-cpp-2/cuda"]

[dependencies]
arcstr = { workspace = true }
ort = { workspace = true }
anyhow = { workspace = true }
tracing-subscriber = { workspace = true }
tokenizers = { workspace = true }
ndarray = { workspace = true }
usearch = { workspace = true }
memmap2 = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true }
fxhash = { workspace = true }
chrono = { workspace = true }
indexmap = { workspace = true }
llama-cpp-2 = { workspace = true }
encoding_rs = { workspace = true }
compact_str = { workspace = true }
tracing = { workspace = true }
smallvec = { workspace = true }
regex = { workspace = true }
fs3 = { workspace = true }
infer = { workspace = true }
tempfile = { workspace = true }
md5 = { workspace = true }
