[package]
name = "utils"
version = "0.1.0"
edition = "2021"

[profile.release]
codegen-units = 1
opt-level = 3
lto = true
debug = false

[features]
vulkan = ["ragtime/vulkan"]
native = ["ragtime/native"]
cuda = ["ragtime/cuda"]

#[[bin]]
#name = "embed"
#path = "src/embed.rs"

[[bin]]
name = "chunk"
path = "src/chunk.rs"

[[bin]]
name = "gen"
path = "src/gen.rs"

[[bin]]
name = "qa"
path = "src/qa.rs"

[dependencies]
ragtime = { path = "../ragtime" }
ort = { workspace = true }
anyhow = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
llama-cpp-2 = { workspace = true }
clap = { version = "4.5.8", features = ["derive"] }
clap_derive = "4.5.8"
